Corrijo ruta del css en index.html para Github

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG Fortress Manager</title>
-    <link rel="stylesheet" href="../Proyecto_Fortaleza/css/style.css"> <!-- ESTA RUTA ES CLAVE PARA QUE ESTE USANDO EL CSS -->
+    <link rel="stylesheet" href="css/style.css"> <!-- ESTA RUTA ES CLAVE PARA QUE ESTE USANDO EL CSS -->
 </head>
 <body> <!--Aqui comienza el cuerpo de la página-->
 
