Actualización Index con flexbox

--- a/index.html
+++ b/index.html
@@ -1,64 +1,56 @@
-<!DOCTYPE html> <!--Define el tipo de documento como html-->
+<!DOCTYPE html>
 <html lang="es">
-<head> <!--Aquí está el head-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPG Fortress Manager</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- ESTA RUTA ES CLAVE PARA QUE ESTE USANDO EL CSS -->
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>RPG Fortress Manager</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
-<body> <!--Aqui comienza el cuerpo de la página-->
+<body>
 
-    <header> 
-        <h1>RPG FORTRESS MANAGER</h1>
-        <p>Transforma tu servidor de discord en una Fortaleza interactiva para tu comunidad de ROL</p>
-    </header>
+<header>
+<h1>RPG FORTRESS MANAGER</h1>
+<p>Transforma tu servidor de discord en una Fortaleza interactiva para tu comunidad de ROL</p>
+</header>
 
-    <!--Aquí se ordenan los textos del menú de navegación bajo el head y se direcciona a las principales páginas del sitio-->
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="./pages/sobre-nosotros.html">Sobre Nosotros</a>
-        <a href="./pages/servicios.html">Servicios</a>
-        <a href="./pages/blog.html">Blog</a>
-        <a href="./pages/contacto.html">Contacto</a>
-        <a href="./pages/roadmap.html">Roadmap</a>
-    </nav>
+<nav>
+<a href="index.html">Inicio</a>
+<a href="./pages/sobre-nosotros.html">Sobre Nosotros</a>
+<a href="./pages/servicios.html">Servicios</a>
+<a href="./pages/blog.html">Blog</a>
+<a href="./pages/contacto.html">Contacto</a>
+<a href="./pages/roadmap.html">Roadmap</a>
+</nav>
 
-<!-- Esta es la sección principal visual del sitio, la llamo "hero" porque así se llama comúnmente en diseño web -->
 <section class="hero">
-    <!-- Título que presenta la idea principal del sitio -->
-    <h2>Estructura flexible para <br> cualquier entorno narrativo</h2>
-
-    <!-- Subtítulo tipo "eslogan" -->
-    <p class="tagline">La historia te pertenece a ti y a tu comunidad</p>
+<h2>Estructura flexible para <br> cualquier entorno narrativo</h2>
+<p class="tagline">La historia te pertenece a ti y a tu comunidad</p>
 </section>
 
-    <section class="contenido">
-        <h3>¿Qué hace RPG Fortress Manager?</h3>
-        <p>Básicamente intenta simular que tu servidor de discord sea una fortaleza.
-        Esto como herramienta complementaria a tu juego de ROL (Actualmente pensado para sistema DND)</p>
+<section class="contenido">
+<h3>¿Qué hace RPG Fortress Manager?</h3>
+<p>Básicamente intenta simular que tu servidor de discord sea una fortaleza.</p>
 
-        <h3>¿Cómo?</h3>
-        <p>Al darle inicio creará una estructura de canales con funciones específicas,
-        generará y asignará roles y comenzará a monitorear las actividades de sus usuarios como si fueran miembros trabajando en el desarrollo de la fortaleza.</p>
+<h3>¿Cómo?</h3>
+<p>Al darle inicio creará una estructura de canales con funciones específicas...</p>
 
-        <h3>Un ejemplo.</h3>
-        <p>Al construirse la fortaleza, se crea un canal de voz llamado “Estandarte (sin construir)”, este estandarte requiere que se “trabaje” 10 minuto/600 segundos en él. Los miembros del discord que se conecten a este canal comenzarán a registrar tiempo de progreso. Al alcanzar los 10 minutos el canal de voz para a llamarse “Estandarte” y se habrá desbloqueado un bono. Los jugadores dentro o hasta un máximo de 10 metros de la fortaleza obtendrán un 1d6 que podrán sumar a sus tiradas de ataque o salvación.Funciones más avanzadas considerarán características de personajes. Algunas estructuras requerirán que los miembros consigan mayor volúmen de recursos y permitirán generar recursos básicos o avanzados que podrán ser utilizados a la hora de jugar tus sesiones.</p>
-    </section>
+<h3>Un ejemplo.</h3>
+<p>Al construirse la fortaleza, se crea un canal de voz llamado “Estandarte (sin construir)”...</p>
+</section>
 
-<!-- Footer -->
 <footer>
-    <div class="footer-content">
-    <p>© 2025 RPG Fortress Manager</p>
-    <div class="footer-icons">
-        <a href="https://discord.gg/V9SkcefdS5" target="_blank">
-        <img src="./assets/img/discord.png" alt="Discord" class="icono-footer" />
-        </a>
-        <a href="https://patreon.com/TU_USUARIO" target="_blank">
-        <img src="./assets/img/patreon.png" alt="Patreon" class="icono-footer" />
-        </a>
-    </div>
-    </div>
+<p>© 2025 RPG Fortress Manager</p>
+<div class="footer-icons">
+    <a href="https://discord.gg/V9SkcefdS5" target="_blank">
+    <img src="./assets/img/discord.png" alt="Discord" class="icono-footer" />
+    </a>
+    <a href="https://patreon.com/TU_USUARIO" target="_blank">
+    <img src="./assets/img/patreon.png" alt="Patreon" class="icono-footer" />
+    </a>
+</div>
 </footer>
 
 </body>
 </html>
+
+
