Actualizo README y mejoras finales en HTML

--- a/index.html
+++ b/index.html
@@ -28,15 +28,31 @@
 </section>
 
 <section class="contenido">
-<h3>¿Qué hace RPG Fortress Manager?</h3>
-<p>Básicamente intenta simular que tu servidor de discord sea una fortaleza.</p>
+  <h3>¿Qué hace RPG Fortress Manager?</h3>
+  <p><strong>RPG Fortress Manager</strong> transforma tu servidor de Discord en una fortaleza viviente, donde la actividad de tus miembros impulsa la construcción, la recolección de recursos y el crecimiento colectivo. Inspirado en juegos como Dungeons & Dragons, este bot convierte tu comunidad en una experiencia inmersiva y gamificada.</p>
 
-<h3>¿Cómo?</h3>
-<p>Al darle inicio creará una estructura de canales con funciones específicas...</p>
+  <h3>¿Cómo?</h3>
+  <p>Al ejecutar el comando de inicio, el bot crea automáticamente una estructura de canales de texto y voz con funciones específicas. Estos canales representan áreas de la fortaleza: desde campos de trabajo hasta zonas de descanso. Al participar en ellos (por ejemplo, conectándose a un canal de voz), los miembros generan recursos como piedra, madera, raciones y agua, en intervalos de tiempo definidos.</p>
 
-<h3>Un ejemplo.</h3>
-<p>Al construirse la fortaleza, se crea un canal de voz llamado “Estandarte (sin construir)”...</p>
+  <h3>Un ejemplo.</h3>
+  <p>Cuando la fortaleza se inicia, se genera un canal de voz titulado <em>“Estandarte (sin construir)”</em>. Este canal es más que decorativo: simboliza el corazón de la fortaleza y puede evolucionar con el tiempo. A medida que los jugadores recolectan recursos y desbloquean mejoras, el canal cambia de nombre y puede ofrecer beneficios pasivos, desbloquear nuevas mecánicas o simplemente convertirse en un símbolo de orgullo para la comunidad.</p>
+
+  <h3>Características destacadas</h3>
+  <ul>
+    <li>🛠 <strong>Construcción progresiva:</strong> desbloquea murallas, torres, talleres y más con los recursos recolectados.</li>
+    <li>🎲 <strong>Inspirado en D&D 5e:</strong> la recolección se basa en habilidades como Supervivencia, Naturaleza y Atletismo.</li>
+    <li>⏳ <strong>Recolección automática:</strong> los jugadores generan recursos por su tiempo activo en canales de voz.</li>
+    <li>🔥 <strong>Rol “Descansado”:</strong> al visitar la fogata, los usuarios duplican su producción temporalmente.</li>
+    <li>⚔️ <strong>Ambientación y rol:</strong> fomenta la narrativa y organización de tu comunidad como una verdadera alianza de aventureros.</li>
+  </ul>
+
+  <h3>¿Para quién es?</h3>
+  <p>Ideal para comunidades de juegos de rol, servidores de D&D, grupos narrativos o cualquier servidor que busque añadir una capa de juego pasivo y colaborativo en su Discord. No requiere conocimientos técnicos, solo instalar, iniciar y ver cómo la fortaleza crece con la participación de tu gente.</p>
+
+  <h3>¿Qué necesitas para comenzar?</h3>
+  <p>Instala el bot, ejecuta el comando inicial y deja que RPG Fortress Manager convierta tu servidor en una fortaleza única y dinámica. Todo está diseñado para crecer contigo y tu comunidad, recompensando la constancia y el espíritu de equipo.</p>
 </section>
+
 
 <footer>
 <p>© 2025 RPG Fortress Manager</p>
