--- a/pages/roadmap.html
+++ b/pages/roadmap.html
@@ -66,44 +66,93 @@
 </nav>
 
 <section class="contenido">
-<h2>🗺️ Roadmap de Desarrollo</h2>
-<div class="roadmap-container">
+  <h2>🗺️ Roadmap de Desarrollo</h2>
+  <div class="roadmap-container">
+
+    <!-- Etapas completadas -->
     <div class="roadmap-item">
-    <div class="roadmap-icon">✔️</div>
-    <div class="roadmap-text">
-        <h4>Marzo 2025</h4>
-        <p>Versión Beta del Bot</p>
+      <div class="roadmap-icon">✔️</div>
+      <div class="roadmap-text">
+        <h4>Versión Beta Inicial</h4>
+        <p>Se implementa el sistema base que convierte el servidor en una fortaleza con generación pasiva de recursos.</p>
+      </div>
     </div>
-    </div>
+
     <div class="roadmap-item">
-    <div class="roadmap-icon">✔️</div>
-    <div class="roadmap-text">
-        <h4>Abril 2025</h4>
-        <p>Corrección de errores y primeras pruebas</p>
+      <div class="roadmap-icon">✔️</div>
+      <div class="roadmap-text">
+        <h4>Generación de Recursos</h4>
+        <p>Los canales de voz permiten recolectar piedra, madera, agua y raciones según habilidades de D&D 5e.</p>
+      </div>
     </div>
-    </div>
+
     <div class="roadmap-item">
-    <div class="roadmap-icon">🛠️</div>
-    <div class="roadmap-text">
-        <h4>Mayo 2025</h4>
-        <p>Integración con bases de datos externas</p>
+      <div class="roadmap-icon">✔️</div>
+      <div class="roadmap-text">
+        <h4>Rol "Descansado"</h4>
+        <p>Implementado el sistema de bonificación temporal al visitar la fogata, duplicando la recolección por 30 minutos.</p>
+      </div>
     </div>
-    </div>
+
     <div class="roadmap-item">
-    <div class="roadmap-icon">🎯</div>
-    <div class="roadmap-text">
-        <h4>Junio 2025</h4>
-        <p>Módulo de recompensas y economía</p>
+      <div class="roadmap-icon">✔️</div>
+      <div class="roadmap-text">
+        <h4>Conexión con Base de Datos</h4>
+        <p>MySQL integrado para registrar usuarios, recursos y estado de estructuras. Preparado para escalabilidad.</p>
+      </div>
     </div>
-    </div>
+
     <div class="roadmap-item">
-    <div class="roadmap-icon">🚀</div>
-    <div class="roadmap-text">
-        <h4>Julio 2025</h4>
-        <p>Publicación oficial y documentación</p>
+      <div class="roadmap-icon">✔️</div>
+      <div class="roadmap-text">
+        <h4>Renombrado de Canales en Tiempo Real</h4>
+        <p>Los nombres de canales se actualizan automáticamente con el valor de recursos generados.</p>
+      </div>
     </div>
+
+    <!-- Etapas en desarrollo -->
+    <div class="roadmap-item">
+      <div class="roadmap-icon">🛠️</div>
+      <div class="roadmap-text">
+        <h4>Evitar duplicación de canales</h4>
+        <p>Prevención automática de canales repetidos al usar comandos como <code>/iniciar</code>.</p>
+      </div>
     </div>
-</div>
+
+    <div class="roadmap-item">
+      <div class="roadmap-icon">🛠️</div>
+      <div class="roadmap-text">
+        <h4>Visualización de Fortaleza</h4>
+        <p>Diseño de un sistema visual en Discord para mostrar estructuras construidas y progreso colectivo.</p>
+      </div>
+    </div>
+
+    <!-- Futuras funcionalidades -->
+    <div class="roadmap-item">
+      <div class="roadmap-icon">🎯</div>
+      <div class="roadmap-text">
+        <h4>Módulo de Recompensas y Economía</h4>
+        <p>Implementación de un sistema económico donde los recursos puedan canjearse por mejoras, roles o ítems.</p>
+      </div>
+    </div>
+
+    <div class="roadmap-item">
+      <div class="roadmap-icon">🎯</div>
+      <div class="roadmap-text">
+        <h4>Expansiones Narrativas</h4>
+        <p>Desbloqueo de nuevas zonas (como minas, talleres, bibliotecas) con efectos de juego y ambientación.</p>
+      </div>
+    </div>
+
+    <div class="roadmap-item">
+      <div class="roadmap-icon">🚀</div>
+      <div class="roadmap-text">
+        <h4>Publicación Oficial y Documentación</h4>
+        <p>Lanzamiento del bot con documentación para su uso, comandos, y guía de administración para comunidades.</p>
+      </div>
+    </div>
+
+  </div>
 </section>
 
 <footer>
