Actualización de archivos HTML y SCSS para mejorar la estructura y el estilo del sitio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>RPG Fortress Manager</title>
 <link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -22,12 +24,12 @@
 <a href="./pages/roadmap.html">Roadmap</a>
 </nav>
 
-<section class="hero">
+<section class="hero"data-aos="zoom-in">
 <h2>Estructura flexible para <br> cualquier entorno narrativo</h2>
 <p class="tagline">La historia te pertenece a ti y a tu comunidad</p>
 </section>
 
-<section class="contenido">
+<section class="contenido" data-aos="fade-up">
   <h3>¿Qué hace RPG Fortress Manager?</h3>
   <p><strong>RPG Fortress Manager</strong> transforma tu servidor de Discord en una fortaleza viviente, donde la actividad de tus miembros impulsa la construcción, la recolección de recursos y el crecimiento colectivo. Inspirado en juegos como Dungeons & Dragons, este bot convierte tu comunidad en una experiencia inmersiva y gamificada.</p>
 
@@ -60,12 +62,19 @@
     <a href="https://discord.gg/V9SkcefdS5" target="_blank">
     <img src="./assets/img/discord.png" alt="Discord" class="icono-footer" />
     </a>
-    <a href="https://patreon.com/TU_USUARIO" target="_blank">
+    <a href="https://patreon.com/RPGFortressManager?utm_medium=unknown&utm_source=join_link&utm_campaign=creatorshare_creator&utm_content=copyLink" target="_blank">
     <img src="./assets/img/patreon.png" alt="Patreon" class="icono-footer" />
     </a>
 </div>
 </footer>
-
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
 
