--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,7 +54,7 @@
         <a href="https://discord.gg/V9SkcefdS5" target="_blank">
         <img src="../assets/img/discord.png" alt="Discord" class="icono-footer" />
         </a>
-        <a href="https://patreon.com/TU_USUARIO" target="_blank">
+        <a href="https://patreon.com/RPGFortressManager?utm_medium=unknown&utm_source=join_link&utm_campaign=creatorshare_creator&utm_content=copyLink" target="_blank">
         <img src="../assets/img/patreon.png" alt="Patreon" class="icono-footer" />
         </a>
     </div>
